--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,32 @@
-server {
-    listen       80;
-    server_name  http://18.222.161.65/; 
+events {
+    // Any event-related configurations can go here, if needed
+}
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    location ~ ^/api/(videos|videos/single|videos/comments) {
-        set $api_endpoint $1;
-        proxy_pass https://take-home-assessment-423502.uc.r.appspot.com/api/$api_endpoint;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen       80;
+        server_name  _;  
 
-     
-        proxy_set_header Origin "http://localhost:3000";
-        proxy_set_header Referer "http://localhost:3000";
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri $uri/ /index.html;
+        }
+
+        location ~ ^/api/(videos|videos/single|videos/comments) {
+            set $api_endpoint $1;
+            proxy_pass https://take-home-assessment-423502.uc.r.appspot.com/api/$api_endpoint;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            
+            proxy_set_header Origin "http://localhost:3000";
+            proxy_set_header Referer "http://localhost:3000";
+        }
     }
 }
