--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 events {
-    // Any event-related configurations can go here, if needed
+    # Define event-related configurations if needed
 }
 
 http {
@@ -8,7 +8,7 @@ http {
 
     server {
         listen       80;
-        server_name  _;  
+        server_name  _;
 
         location / {
             root   /usr/share/nginx/html;
