--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,38 @@
-events {
-    # Define event-related configurations if needed
-}
+server {
+    listen       80;
+    server_name  _;
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
 
-    server {
-        listen       80;
-        server_name  _;
+    location ~ ^/api/(videos|videos/single|videos/comments) {
+        set $api_endpoint $1;
+        proxy_pass https://take-home-assessment-423502.uc.r.appspot.com/api/$api_endpoint;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-        location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
-            try_files $uri $uri/ /index.html;
-        }
+        
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";  
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization";  
 
-        location ~ ^/api/(videos|videos/single|videos/comments) {
-            set $api_endpoint $1;
-            proxy_pass https://take-home-assessment-423502.uc.r.appspot.com/api/$api_endpoint;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+     
+        proxy_pass_request_headers on;
 
-            
-            proxy_set_header Origin "http://localhost:3000";
-            proxy_set_header Referer "http://localhost:3000";
+
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
         }
     }
 }
